panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__bool__test_convert_from_to_bool.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/bool/test_convert_from_to_bool.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/bool/test_convert_from_to_bool.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration x~3 `int` 42)
         (declaration p~4 `ptr<int>` (addressof (name x~3 `int`)))
         (declaration from_ptr~5 `bool` (name p~4 `ptr<int>`))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (name from_ptr~5 `bool`)))
         (declaration from_zero~6 `bool` 0ull)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (name from_zero~6 `bool`)))
         (declaration b~7 `bool` 42)
         (return (add (name b~7 `bool`) 1ul)))))

----- stderr -----
