panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__bool__test_promotion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/bool/test_promotion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               false))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               true))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (generic
                  (add true 1)
                  (assoc `int` 0)
                  (assoc `unsigned int` 1))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (generic
                  (add true 1u)
                  (assoc `int` 0)
                  (assoc `unsigned int` 1))))
         (return
            (generic
               (add true false)
               (assoc `int` 42)
               (assoc `unsigned int` 27))))))

----- stderr -----
